2008-03-05  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-sum.el (gnus-print-buffer): Honor ps-print-color-p.
	Suggested by <chris.anderton@zetnet.co.uk>.

2008-03-01  Reiner Steib  <Reiner.Steib@gmx.de>

	Sync from EMACS_22_BASE.

	* parse-time.el: Rename elt->parse-time-elt and val->parse-time-val.

	* nnimap.el (nnimap-split-download-body): Fix spelling.

	* netrc.el: Remove eval-and-compile for `netrc-point-at-eol'.

	* gnus-uu.el (gnus-uu-default-view-rules, gnus-uu-decode-save): Fix
	spelling and typo.

	* gnus-demon.el (gnus-demon): Fix spelling.

	* deuglify.el: Don't use "illegal".

2008-03-01  Glenn Morris  <rgm@gnu.org>

	* calendar/time-date.el (with-decoded-time-value): Doc fix.

2008-03-01  Ari Roponen  <ari.roponen@gmail.com>  (tiny change)

	* calendar/time-date.el (encode-time-value): Doc fix.

2008-03-01  Glenn Morris  <rgm@gnu.org>

	* message.el (message-tool-bar-retro): Update for rename
	mail_send.xpm->mail-send.xpm.

2008-03-01  Reiner Steib  <Reiner.Steib@gmx.de>

	* Update copyright years.

2008-02-29  Andreas Seltenreich  <andreas@gate450.dyndns.org>

	* nnweb.el (nnweb-google-parse-1): Fix date parsing on articles with
	empty author.

2008-02-16  Reiner Steib  <Reiner.Steib@gmx.de>

	* mail-source.el (mail-source-delete-incoming): Change default.
	Supplement doc string.

2008-02-14  Reiner Steib  <Reiner.Steib@gmx.de>

	* nnmail.el (nnmail-message-id-cache-file): Derive from
	`gnus-home-directory'.

2008-02-11  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-topic.el (gnus-topic-select-group, gnus-topic-read-group):
	Document negativ prefix.

	* gnus-group.el (gnus-group-read-group): Document negativ prefix.

2008-02-03  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus.el (gnus-group-startup-message): Add `find-image' call before
	image-load-path is let-bound.  Reported by Harald Hanche-Olsen
	<hanche@math.ntnu.no>.

2008-01-12  Reiner Steib  <Reiner.Steib@gmx.de>

	* gnus-sum.el (gnus-article-sort-by-random)